fixed form issue, need to fix button stretch issue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,4 +24,5 @@ body {
   background-color: 'B3CBB9';
   display: flex;
   flex-flow: row wrap;
+  width: '5rem'
 }
